# WelcomeHomeDB

./: .gitignore  README.md  __init__.py  auth.py  db.py  pyproject.toml
WelcomeHomeDB/: __init__.py  auth.py  db.py
WelcomeHomeDB/sql/: indices.sql  schema.sql
WelcomeHomeDB/templates/auth/: accept_donation.html  index.html  register.html
WelcomeHomeDB/utils/: dummy_insert.py  setup.md  ss.ipynb
instance/: config.py
sql/: experimental_schema.sql  inserts.sql  schema.sql
templates/: base.html
templates/auth/: accept_donation.html  add_to_order.html  generate_report.html  index.html  prepare_orders.html  register.html
utils/: dummy_insert.py  new_dummy_data_gen.py  setup.md  show_image.ipynb
